# quota-pilot

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  index.html  local-server.mjs  local-server.py  package-lock.json  package.json  restart-local-server.ps1  start-dev.ps1
.github/: pull_request_template.md
docs/: auto-update-plan.md  release.md
electron/: codex-runtime-state.cjs  local-backend.cjs  main.cjs  preload.cjs
installer/: installer.nsh
scripts/: clean-generated.mjs  clean-generated.ps1  extract-release-notes.mjs  init_newapi_logs.py  install-shortcut.ps1  package-desktop.ps1  package-electron.ps1  prepare-electron-runtime.mjs  run-tests.mjs  scan-secrets.mjs  scan-secrets.ps1  start-desktop.ps1
src/: App.tsx  global.d.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  models.rs  settings.rs
src-tauri/src/api/: mod.rs  pricing.rs  usage_parser.rs
src-tauri/src/providers/: codex.rs  mod.rs  new_api.rs
tests/: about-update-source.test.mjs  app-codex-status-source.test.mjs  app-fast-token-toast-source.test.mjs  app-official-token-source.test.mjs  app-sync-toast-source.test.mjs  backfill_planner_test.py  capsule-stability-source.test.mjs  codex-activity-behavior.test.mjs  codex-activity-source.test.mjs  codex-overview-store.test.mjs  codex-runtime-state.test.mjs  codex-status-store.test.mjs  codex-token-ingestion.test.mjs  desktop-launcher.test.mjs  detail-panel-source.test.mjs  display.test.mjs  draggable-capsule-source.test.mjs  (+23 more)
(+33 files in other folders)
