[package]
name = "codex-quota-glance"
version = "0.1.0"
edition = "2021"

[lib]
name = "codex_quota_glance"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
thiserror = "1"
tokio = { version = "1", features = ["time"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
